<resources>
    <string name="app_name">Study Quiz</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Enter your username</string>
    <string name="password">Password</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="confirmPassword_placeholder">Confirm password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Your name</string>
    <string name="detail_chapter_question_number">Number question:</string>
    <string name="detail_chapter_btn_flashcard">Study with cards</string>
    <string name="detail_chapter_btn_test">Start test</string>
    <string name="detail_subject_title_list">All Chapter</string>
    <string name="test_room_btn_previous">Previous</string>
    <string name="test_room_btn_next">Next</string>
    <string name="test_result_title">Test Result</string>
    <string name="flash_card_done_title">Nice work!</string>
    <string name="flash_card_done_btn_study_again">Study again</string>
    <string name="flash_card_done_btn_study_new">Study new cards</string>
    <string name="review_answer_not_selected">Not selected yet</string>
    <string name="review_answer_toolbar_title">Test review</string>
    <string name="login_label_signup">Sign up now</string>
    <string name="button_load_more_text">Load more</string>
    <string name="feedback_rbt_duplication">This question is duplication</string>
    <string name="feedback_rbt_wrong_answer">The answer to this question is wrong</string>
    <string name="feedback_rbt_other">Other</string>
    <string name="feedback_title">Feedback for question</string>
    <string name="fragment_subject_btn_load">Load subjects</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
