<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phuongnt.studyquiz.activity.SignUpActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            style="@style/CommonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder" />

        <TextView
            style="@style/CommonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            style="@style/CommonLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirmPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword_placeholder"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView"
            style="@style/CommonLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email" />

        <EditText
            android:id="@+id/email"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            android:onClick="onLoginButtonSelected"
            android:text="Sign Up" />

    </LinearLayout>
</LinearLayout>
