<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ProfileTextValueItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />
        <EditText
            android:id="@+id/edt_username"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"/>
        <TextView
            android:layout_marginTop="5dp"
            style="@style/ProfileTextValueItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"/>

        <Button
            android:onClick="onLoginButtonSelected"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            android:text="Login" />

    </LinearLayout>
</LinearLayout>