<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.FlashCardDoneActivity"
    >
    <include layout="@layout/app_bar"/>
    <LinearLayout
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/main_black"
            style="@style/CommonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flash_card_done_title"/>
        <TextView
            android:id="@+id/tv_done_title"
            android:gravity="center"
            android:textColor="@color/main_black"
            style="@style/CommonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:onClick="onButtonStudyAgainSelected"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/flash_card_done_btn_study_again"
            android:background="@drawable/border_primary"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="onButtonStudyNewSeleted"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/flash_card_done_btn_study_new"
            android:background="@drawable/border_primary"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>