<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phuongnt.studyquiz.activity.FeedbackActivity">
    <LinearLayout
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="26sp"
            style="@style/CommonLabelPrimary"
            android:gravity="center"
            android:text="@string/feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:checkedButton="@id/rbt_duplication"
            android:id="@+id/rdg_error_type"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbt_duplication"
                android:text="@string/feedback_rbt_duplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbt_wrong"
                android:text="@string/feedback_rbt_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbt_other"
                android:text="@string/feedback_rbt_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <EditText
            android:id="@+id/edt_comment"
            android:hint="Comment for this error"
            android:maxLines="5"
            android:minHeight="50dp"
            android:background="@drawable/border_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="onButtonCancelSelected"
                android:layout_weight="1"
                style="@style/CommonButtonBorder"
                android:text="Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"></LinearLayout>
            <Button
                android:onClick="onButtonFeedbackSelected"
                android:layout_weight="1"
                style="@style/CommonButtonBorder"
                android:text="Send"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
